# openrfid-simulator

./: .gitignore  DESKTOP_GUIDE.md  DOWNLOADS.md  LICENSE  README.md  USER_GUIDE.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vitest.config.ts
.changeset/: config.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  better-sqlite3-stub.js  main.tsx  plugins-browser.ts  security.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/views/: DashboardView.tsx  ProtocolsPluginsView.tsx
apps/docs/: astro.config.mjs  package.json  tsconfig.json
apps/docs/src/: content.config.ts
apps/docs/src/content/docs/: index.md  (+9 more)
apps/e2e/: package.json  playwright.config.ts
apps/e2e/tests/: simulator-workflow.spec.ts
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/views/: EventHistoryView.tsx  ReadersView.tsx  TagsView.tsx
research-paper/: PAPER_DRAFT.md
roadmap/: phase_10_branding_licensing.txt  phase_1_foundation_core.txt  phase_2_simulation_engine_persistence.txt  phase_3_plugin_system_protocols.txt  phase_4_ui_apps_desktop_web.txt  phase_5_cli_docs_mvp_launch.txt  phase_6_advanced_protocols_v2.txt  phase_7_visual_warehouse_spatial_v3.txt  phase_8_rf_physics_engine_v4.txt  phase_9_cloud_ecosystem_ai_v5.txt  requirement.md  tracker.txt
scripts/: add-license-headers.js  build-desktop.js  generate-png-logo.js
